Ensure border is set so it doesn't jump on selection

--- a/src/Umbraco.Web.UI.Client/src/less/components/umb-iconpicker.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/umb-iconpicker.less
@@ -13,6 +13,7 @@
     align-items: center;
     margin-bottom: 0;
     overflow: hidden;
+    border: 1px solid transparent;
 }
 
 .umb-iconpicker-item button {
@@ -41,7 +42,7 @@
 
 .umb-iconpicker-item.-selected {
     background: @gray-10;
-    border: solid 1px @ui-active;
+    border-color: @ui-active;
     border-radius: @baseBorderRadius;
     box-sizing: border-box;
 }
